PLFM-8519 - Add `userHasDownloadPermission` to `RestrictionInformationResponse`